HelloUltraviolet/Fixtures/RejectedSource/FFI/CapabilityIsolationDiagnostics/Expected.uv
//! Expected diagnostic metadata for the CapabilityIsolationDiagnostics rejected-source specimen.

expectedDiagnostic("E-TYP-2623", "diagnostics.23.CapabilityIsolationDiagnostics")
